2005-09-29 Mariusz Woloszyn
	* configure.in: better libusb version detection implemented
	* src/ptp-pack.c: silence gcc warnings

2005-09-07 Mariusz Woloszyn
	* configure.in, Makefile.am: use myusb only on Linux
	* ptpcam.c: use myusb interface instead of libusb in case of Linux,
	  beside that it works where URB fails it is also abou 20% to 50%
	  faster!!!
	* ptpcam.h: define myusb interface

2005-09-07 Mariusz Woloszyn
	* Initial 1.1.0 commit
	* ptpcam.c: fixed minor bug on usb read
	* ptpcam.h: fixed typo
	* myusb.c: added private usb bulk read/write code
	* configure.in, Makefile.am: updated version added new files, fixed
	parralel build problem (thanks to Daniel Black for patch)


2005-07-26 Mariusz Woloszyn
	* ptpcam.c: file creation time prserved accross download
2005-07-07 Mariusz Woloszyn
	* ptp.c, ptpcam.c, ptpcam.h: better capture, better error handling,
	  code polishing
2005-07.02 Mariusz Woloszyn
	* src/ptpcam.c: added --loop-capture
	* configure.in: changed version number, improved libusb checking
2005-07-02 Mariusz Woloszyn
	* src/ptpcam.c, src/ptp.c: fixed a bug that caused files over 2MB to
	  be corrupted while downloading. 
2005-07-02 libptp2-1.0.3 started
2005-05-06 Mariusz Woloszyn
	* ptpcam.c: added NIKON capture workaround
2005-04-21 Mariusz Woloszyn
	* src/ptpcam.c,src/ptpcam.h: added --capture, --delete-object and
	  --delete-all-files support
2005-03-01 Mariusz Woloszyn
	* ptp.c, ptp.h, ptp-pack.c, ptpcam.c: moved to src
	* src/ptpcam.c: moved some defines and definitions to ptpcam.h,
	  added "get all files" operations, added --overwrite mode,
	  fixed stall problem for kernels 2.6.x (affecting CANON cameras),
	  some code cleanup and reorganization, changed comments to /**/
	* src/ptp.c, src/ptp.h: fixed properties typos and added new
	  properties
	* src/ptpcam.h: added
	* configure.in, Makefile.am, src/Makefile.am: improved and adapted
	  build system
2005-02-14 Mariusz Woloszyn